8036851: volatile double accesses are not explicitly atomic in C2

The C2 structure is adapted to distinguish between volatile and non-volatile double accesses.

Reviewed-by: twisti, kvn